# ac-arg-with-sample

./: README.md  use-ac-arg-with-correctly.tdiary.txt
fallback/: configure.ac
just-work/: Makefile.am  ac-arg-with-sample.c  configure.ac
right-thing/: configure.ac
